# Borehole-to-Surfer

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  borehole_stick_gui.py  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_borehole_stick_gui.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
borehole_stick_gui/: __init__.py
examples/: collar_example_comprehensive.csv  collar_template.csv  line_example_comprehensive.csv  lithology_example_comprehensive.csv  lithology_template.csv  palette_example_comprehensive.csv  palette_template.csv
src/borehole_stick_gui/: __init__.py  app.py  basemap.py  export_bln.py  export_postmap_csv.py  export_qa.py  export_shp.py  geo.py  geometry.py  io_csv.py  map_view.py  models.py  palette.py  sticks.py
tests/: test_app_map_view.py  test_app_reverse_chainage.py  test_app_validation.py  test_basemap.py  test_export_postmap_csv.py  test_export_shp.py  test_geo.py  test_geometry.py  test_io_csv_line.py  test_io_csv_validation.py  test_map_view.py  test_palette.py  test_sticks.py  test_surfer_autoload_export.py
